Minor fixes to fit view on mobile

--- a/public/styles/3-line-menu.css
+++ b/public/styles/3-line-menu.css
@@ -7,6 +7,9 @@
    background-color: #aeaeae;
    border: 2px solid black;
    display: none;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
 }
 .custom-fa-3bar {
    font-size: 1.5rem;
